# Geant4-BGO-simple

./: CMakeLists.txt  README.md
include/: ActionInit.hh  DetectorConstruction.hh  ParticleSource.hh  PhysicsList.hh  RunAction.hh  SensitiveDetector.hh
macros/: sim.mac  vis.mac
src/: ActionInit.cc  DetectorConstruction.cc  ParticleSource.cc  PhysicsList.cc  RunAction.cc  SensitiveDetector.cc  main.cc
